plugins {
    id 'java'
}

java {
    modularity.inferModulePath = true
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15

}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':remix')
}

